<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_nav"
            android:icon="@drawable/ic_home_nav"
            android:title="@string/home" />
        <item
            android:id="@+id/custom_nav"
            android:icon="@drawable/ic_coffe_cup_menu"
            android:title="@string/custom" />
        <item android:id="@+id/machines"
            android:title="@string/machines"
            android:icon="@drawable/ic_coffee_machine" />
        <item
            android:id="@+id/stats_nav"
            android:icon="@drawable/ic_stats"
            android:title="@string/stats" />

        <item android:id="@+id/coffe_store_nav"
            android:title="@string/coffe_store"
            android:icon="@drawable/ic_coffe_beans" />
    </group>
</menu>